# difend

./: .env.example  .gitignore  LICENSE  README.md  code_diff_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
difend/: __init__.py  __main__.py  agent.py  bundle.py  cli.py  config.py  diff.py  gates.py  git.py  git_diff.py  models.py  observability.py  output.py  parser.py  reports.py  scanner.py  sdk.py
difend/agents/: __init__.py  automated_gates.py  cache.py  classifier.py  context.py  feedback.py  gates.py  graph.py  handoff.py  model.py  prompts.py  reasoning.py  schemas.py  scoring.py  utils.py
difend/commands/: __init__.py  feedback.py  review.py  scan.py
examples/vulnerable-demo/: README.md  app.py  auth.py  config.py  crypto.py  database.py  fake_private_key.pem  frontend.jsx  package.json  payments.py  pyproject.toml  requirements.txt  upload.py
tests/: test_agent.py  test_agentic_graph.py  test_bundle.py  test_cache.py  test_cli.py  test_context.py  test_diff.py  test_feedback.py  test_gates.py  test_llm_schemas.py  test_merge.py  test_package_metadata.py  test_routing.py  test_scan.py  test_scan_command.py  test_scanner.py  test_sdk_scan.py
